--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-title" content="SPABoot Service">
+    <meta name="apple-mobile-web-app-title" content="Service">
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon-180x180.png">
     <link rel="manifest" href="/manifest.json">
-    <title>Service App</title>
+    <title>Service - SPABoot</title>
 </head>
 <body>
 <div id="app"></div>
